--- a/outfit-crud/outfit-crud/outfit-crud.csproj
+++ b/outfit-crud/outfit-crud/outfit-crud.csproj
@@ -26,8 +26,10 @@
 
   <ItemGroup>
     <None Remove="Models\" />
+    <None Remove="Migrations\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
