--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,1 @@
-outfit/src/App.js linguist-vendored
-outfit/src/index.js linguist-vendored
-outfit/src/reportWebVitals.js linguist-vendored
-outfit/src/setupTests.js linguist-vendored
+outfit/src/CRUD.js linguist-vendored
