--- a/outfit/Dockerfile
+++ b/outfit/Dockerfile
@@ -1,29 +1,19 @@
 # Use an official Node.js runtime as a base image
-FROM node:14-alpine as builder
+FROM node:14-alpine
 
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json to the container
-COPY package*.json ./
+# Copy the entire application to the container
+COPY . .
 
 # Install dependencies
 RUN npm install
 
-# Copy the entire application to the container
-COPY . .
-
 # Build the application
-RUN npm run build
+##RUN npm run build
 
-# Use a smaller image for the production environment
-FROM nginx:alpine
+##RUN npm install -g serve
 
-# Copy the built app from the builder stage to the production image
-COPY --from=builder /app/build /usr/share/nginx/html
-
-# Expose the port that Nginx will run on
-EXPOSE 80
-
-# Start Nginx when the container runs
-CMD ["nginx", "-g", "daemon off;"]
+# Start prod when the container runs
+CMD npm run start
