--- a/outfit-crud/Dockerfile
+++ b/outfit-crud/Dockerfile
@@ -1,9 +1,9 @@
 # Use the official .NET SDK image as a build stage
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /app
 
 # Copy the project files and restore dependencies
-COPY *.csproj ./
+COPY ./outfit-crud/*.csproj ./
 RUN dotnet restore
 
 # Copy the remaining source code
@@ -13,7 +13,7 @@ COPY . .
 RUN dotnet publish -c Release -o out
 
 # Use a smaller image for the runtime environment
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/out ./
 
@@ -21,4 +21,4 @@ COPY --from=build /app/out ./
 EXPOSE 7299
 
 # Set the entry point for the application
-ENTRYPOINT ["dotnet", "YourAppName.dll"]
+ENTRYPOINT ["dotnet", "outfit-crud.dll"]
