--- a/outfit-crud/Dockerfile
+++ b/outfit-crud/Dockerfile
@@ -1,24 +1,25 @@
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+WORKDIR /app
+EXPOSE 80
+EXPOSE 433
+
 # Use the official .NET SDK image as a build stage
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
-WORKDIR /app
+WORKDIR /src
+COPY ["./outfit-crud/outfit-crud.csproj", "./"]
+RUN dotnet restore "./outfit-crud.csproj"
+COPY ./outfit-crud .
 
-# Copy the project files and restore dependencies
-COPY ./outfit-crud/*.csproj ./
-RUN dotnet restore
-
-# Copy the remaining source code
-COPY . .
-
-# Build the application
-RUN dotnet publish -c Release -o out
+# BUILD
+RUN dotnet build "outfit-crud.csproj" -c Release -o /app/build
+# PUBLISH
+FROM build as publish
+RUN dotnet publish "outfit-crud.csproj" -c Release -o /app/publish
 
 # Use a smaller image for the runtime environment
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS runtime
+FROM base AS runtime
 WORKDIR /app
-COPY --from=build /app/out ./
-
-# Expose the port your app will run on
-EXPOSE 7299
+COPY --from=publish /app/publish .
 
 # Set the entry point for the application
 ENTRYPOINT ["dotnet", "outfit-crud.dll"]
