Fixed connection string

--- a/outfit-crud/outfit-crud/appsettings.json
+++ b/outfit-crud/outfit-crud/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "CRUDCS": " server=127.0.0.1; database=master; User=sa; Password=z48%Mnt4q]; Integrated Security=True; MultipleActiveResultSets=True; TrustServerCertificate=True; Trusted_Connection=false;"
+    "CRUDCS": " server=db,1433; database=master; User=sa; Password=z48%Mnt4q]; Integrated Security=True; MultipleActiveResultSets=True; TrustServerCertificate=True; Trusted_Connection=false;"
   },
   "AllowedHosts": "*"
 
